--- a/Web-Fundamentals /HTML/Personal-Portfolio - Content/Personal-Portfolio - Content.html
+++ b/Web-Fundamentals /HTML/Personal-Portfolio - Content/Personal-Portfolio - Content.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,31 +10,38 @@
             margin: 1px;
             padding: 2px;
         }
+
         #message-id {
             margin-top: 10px;
         }
+
         #button {
             background-color: white;
             padding: 2px;
             margin: 10px;
             box-shadow: 2px 3px 0px 0px;
         }
+
         table {
             border-collapse: collapse;
         }
+
         td {
             border-bottom: 1px solid black;
             border-right: 1px solid black;
             padding: 8px;
         }
+
         td:last-child {
             border-right: none;
         }
+
         tbody tr:last-child td {
             border-bottom: none;
         }
     </style>
 </head>
+
 <body>
     <header>
         <nav>
@@ -41,18 +49,14 @@
         </nav>
         <section>
             <div>
-                <img src="/Web-Fundamentals /HTML/Personal-Portfolio - Content/images/person-circle-outline.svg"
-                    alt="person" width="90px">
+                <img src="/images/person-circle-outline.svg" alt="person" width="90px">
             </div>
             <div>
-                <img src="/Web-Fundamentals /HTML/Personal-Portfolio - Content/images/logo-github.svg" alt="github"
-                    width="30">
+                <img src="/images/logo-github.svg" alt="github" width="30">
                 <a href="https://github.com/nizaralljamal">my github</a>
-                <img src="/Web-Fundamentals /HTML/Personal-Portfolio - Content/images/logo-linkedin.svg" alt="linkid in"
-                    width="30">
+                <img src="/images/logo-linkedin.svg" alt="linkid in" width="30">
                 <a href="https://www.linkedin.com/">my linked in</a>
-                <img src="/Web-Fundamentals /HTML/Personal-Portfolio - Content/images/logo-facebook.svg" alt="facebook"
-                    width="30">
+                <img src="/images/logo-facebook.svg" alt="facebook" width="30">
                 <a href="https://www.facebook.com/">my facebook</a>
             </div>
         </section>
@@ -130,8 +134,7 @@
                     <figcaption>
                         <h3>Socail Snakes</h3>
                     </figcaption>
-                    <img src="/Web-Fundamentals /HTML/Personal-Portfolio - Content/images/closetag.png" alt="CloseTag"
-                        width="60px">
+                    <img src="/images/closetag.png" alt="CloseTag" width="60px">
                     <figcaption>Social Media App made in Python - <a href="">code</a>|<a href="">deployed</a>
                     </figcaption>
                 </figure>
@@ -158,4 +161,5 @@
         </section>
     </main>
 </body>
+
 </html>
